tp al 20-07, parte 2

--- a/Tp2/Informe/CasinoOnline.tex
+++ b/Tp2/Informe/CasinoOnline.tex
@@ -431,6 +431,15 @@ De manera analoga se procede con las mesas del tragamonedas \label{estaJugando}
 \imagen{0.45}{img/SalidaCrapsAceptado.png}{Salir en Craps Aceptado}
 \newpage
 \imagen{0.45}{img/salirCrapsDenegado.png}{Salir en Craps Denegado}
+\newpage
+\subsubsection{Notificar Estado Craps}
+
+\newpage
+\subsubsection{Observador: Agregar, Notificar y  Quitar}
+\imagen{0.45}{img/observadorCrear.png}{Agregar Observador}
+\imagen{0.45}{img/observadorQuitar.png}{Quitar Observador}
+\newpage
+\imagen{0.45}{img/observadorNotificar.png}{Notificar Observadores}
 
 \newpage
 \subsection{Notificar Estado Casino \label{notCas}}
