* ya pude apostar y tirar en craps

--- a/Tp3/codigo/TODO.txt
+++ b/Tp3/codigo/TODO.txt
@@ -1,1 +1,5 @@
 ver si la lista de estado casino se compone solamente de los jugadores logeados y no te todos los jugadores registrados...
+
+si uno une a una persona a una mesa de craps
+e intenta tirar en otra mesa TIRA: no esta jugando en el juego....
+revisar...
