--- a/Tp3/codigo/TODO.txt
+++ b/Tp3/codigo/TODO.txt
@@ -1,3 +1,6 @@
 si uno une a una persona a una mesa de craps
 e intenta tirar en otra mesa TIRA: no esta jugando en el juego....
 revisar...
+
+- ver tema apuesta de sitio
+- validar que no es pueda unir un jugador desde la misma terminal que otro
