--- a/trunk/Tp3/informe/caratula.tex
+++ b/trunk/Tp3/informe/caratula.tex
@@ -2,35 +2,56 @@
  
 \begin{center}
  
+%% \universidad{Universidad de Buenos Aires}
+%%\facultad{Facultad de ciencias exactas y naturales}
+%%\departamento{Departamento de Computacion}
+%%\materia{Ingenieria del Software I}
+%%\resumen{Proyecto casino online}
+%%\keys{UML, Objetivos, Agentes, Casos De Uso, Diagrama De Contexto, Modelo Conceptual, OCL, Diagrama de Actividades, FSM}
+%%\titulo{Proyecto: Casino Online}
+%%\subtitulo{Informe 1: Analisis de Requerimientos y especificación}
+%%\grupo{Numero de grupo: 2}
+%%\fecha{1er Cuatrimeste 2008}
+%%\footspace{1cm}
+%%\integrante{Aquino, Isis}{313/05}{isisaquino@yahoo.com.ar}
+%%\integrante{Alvarez, Maria de los Angeles}{264/05}{mdelosaalvarez@hotmail.com}
+%%\integrante{Engler, Christian Alejandro}{314/05}{caeycae@gmail.com}
+
+ 
+ 
+ 
+ 
  
 % Upper part of the page
 \includegraphics[width=0.5\textwidth]{./logo_uba_p.jpg}\\[1cm]
  
-\textsc{\LARGE Universidad de Buenos Aires}\\[1.5cm]
+\textsc{\LARGE Universidad de Buenos Aires}\\
+\textsc{\LARGE Facultad de ciencias exactas y naturales}\\[1.5cm]
  
-\textsc{\Large Casino Online}\\[0.5cm]
- 
+\textsc{\Large Departamento de Computacion}\\
+\textsc{\Large Ingenieria del Software I}\\[0.5cm]
  
 % Title
 \HRule \\[0.4cm]
-{ \huge \bfseries Ingenieria I}\\[0.4cm]
+{ \huge \bfseries Proyecto Casino Online}\\[0.4cm]
  
 \HRule \\[1.5cm]
  
-% Author and supervisor
-\begin{minipage}{0.4\textwidth}
-\begin{flushleft} \large
-\emph{Author:}\\
-John \textsc{Smith}\\
-John \textsc{Smith}
-\end{flushleft}
-\end{minipage}
-\begin{minipage}{0.4\textwidth}
-\begin{flushright} \large
-\emph{Supervisor:} \\
-Dr. Mark \textsc{Brown}
-\end{flushright}
-\end{minipage}
+\begin{center}
+	\begin{flushleft} \large
+	\emph{Author:}\\
+		Isis \textsc{Aquino} $313/05$ \\
+		Maria de los Angeles \textsc{Alvarez} $264/05$\\
+		Christian Alejandro \textsc{Engler} $314/05$
+	\end{flushleft}
+\end{center}.\\[2cm]
+
+\begin{center}
+	\begin{flushleft} \large
+	\emph{Supervisor:} \\
+		Sergio \textsc{D'Arrigo}
+	\end{flushleft}
+\end{center}
  
 \vfill
  
