--- a/trunk/Tp3/informe/testEntrar.tex
+++ b/trunk/Tp3/informe/testEntrar.tex
@@ -12,7 +12,7 @@ Este testing evalua una entrada correcta de un cliente al casino, ya sea en modo
 \begin{tabularx}{\textwidth}{||X|X|X|X||} % l = left
 \hline
 \hline
-\multicolumn{4}{||c||}{\textsc{Funcionalidad: Tirar Casino}} \\ % c = center
+\multicolumn{4}{||c||}{\textsc{Funcionalidad: Entrar Casino}} \\ % c = center
 \hline
 \textbf{Factor} & \textbf{Categoria} & \textbf{Eleccion} & \textbf{Clasificación} \\
 \hline
